RM-6 gh-pages library was added

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-messenger",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://gogumaUno.github.io/middle.react.praktikum.yandex",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -21,7 +22,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .tsx src/ --ignore-path .gitignore"
+    "lint": "eslint --ext .tsx src/ --ignore-path .gitignore",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,6 +51,7 @@
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1"
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "gh-pages": "^2.2.0"
   }
 }
