--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,9 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "max-len": ["error", { "code": 160 }],
+    "arrow-body-style": "off",
+    "import/prefer-default-export": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
